--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <script src="dist/bundle.js"></script>
+    <script src="https://d3js.org/d3.v4.js"></script>
   </head>
   <body>
     <h1>GitBuckets!</h1>
