--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <script src="dist/bundle.js"></script>
+    <script src="/bundle.js"></script>
     <script src="https://d3js.org/d3.v4.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   </head>
   <body>
-    <h1>GitBuckets!</h1>
+    <h1>GitBuckets!!</h1>
   </body>
 </html>
