--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src="/bundle.js"></script>
     <script src="https://d3js.org/d3.v3.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="stylesheets/main.css" />
   </head>
   <body>
     <h1>GitBuckets!!</h1>
