2013 data added. team component created

--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
   </head>
   <body>
     <h1>GitBuckets!!</h1>
+    <div class="main-container">
+      <div id="team-sidebar"></div>
+    </div>
   </body>
 </html>
