refactor towards react-redux model

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   </head>
   <body>
     <h1>GitBuckets!!</h1>
-    <div class="main-container">
-      <div id="team-sidebar"></div>
-    </div>
+    <main id="root">
+    </main>
   </body>
 </html>
