event listeners on mouseover nodes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <body>
     <h1>GitBuckets!!</h1>
     <div class="main-container">
-      <div id="team-sidebar"></div>
+      <div id="team-sidebar">
+      </div>
     </div>
   </body>
 </html>
