--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <h1>GitBuckets!!</h1>
     <div class="main-container">
       <div id="team-sidebar">
+        <h1>NBA</h1>
+        <img src="/images/logos/nba.png"></img>
       </div>
     </div>
   </body>
