--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
   </head>
   <body>
     <h1>GitBuckets!!</h1>
-    <div class="main-container">
-      <div id="team-sidebar">
-        <h1>NBA</h1>
-        <img src="/images/logos/nba.png"></img>
-      </div>
+    <div id="main-container">
+      <content id="svg-team-container">
+        <div id="team-sidebar">
+          <h1>NBA</h1>
+          <img src="/images/logos/nba.png"></img>
+        </div>
+      </content>
     </div>
   </body>
 </html>
