--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <script src="https://d3js.org/d3.v3.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" href="stylesheets/main.css" />
+    <link href="https://fonts.googleapis.com/css?family=Maven+Pro" rel="stylesheet">
   </head>
   <body>
-    <h1>GitBuckets!!</h1>
+    <h1 id='page-header'>GitBuckets: An NBA data visualization tool</h1>
     <div id="main-container">
       <content id="svg-team-container">
         <div id="team-sidebar">
