--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
   </head>
   <body>
     <h1 id='page-header'>GitBuckets: An NBA data visualization tool</h1>
+    <h2 id='year-display'><h2>
     <div id="main-container">
       <content id="svg-team-container">
         <div id="team-sidebar">
-          <h1>NBA</h1>
+          <h1>Welcome</h1>
+          <br>
+          <h3>Use the slider or hover over a team to begin<h3>
           <img src="/images/logos/nba.png"></img>
         </div>
       </content>
