season font size increased. nodes on click will stop force, place active node in center

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
     <div id="main-container">
 
-      <svg>
+      <svg id='node-svg'>
         <div id="team-sidebar"></div>
       </svg>
       <input type='range' id='year-slider' min='1996' max='2017' step='1'></input>
