links open up new tabs

--- a/index.html
+++ b/index.html
@@ -33,9 +33,13 @@
 
         <div id="contact-info">
           <ul>
-            <li><a id='website-link' href='http://www.bryanfowler.io'><i class="fa fa-home" aria-hidden="true"></i></a></li>
-            <li><a id='linkedin-link' href='https://www.linkedin.com/in/bryanfowlerme/'><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-            <li><a id='github-link' href='https://github.com/cbfowler4/gitBuckets'><i class="fa fa-github" aria-hidden="true"></i></a></li>
+            <li><a id='website-link'
+              target='_blank'
+              href='http://www.bryanfowler.io'><i class="fa fa-home" aria-hidden="true"></i></a></li>
+            <li><a id='linkedin-link'
+              target='_blank' href='https://www.linkedin.com/in/bryanfowlerme/'><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+            <li><a id='github-link'
+              target='_blank' href='https://github.com/cbfowler4/gitBuckets'><i class="fa fa-github" aria-hidden="true"></i></a></li>
           </ul>
         </div>
       </svg>
